# stem-qa-agent

./: .gitignore  DESIGN.md  README.md  SUBMISSION.md  pyproject.toml
.github/workflows/: test.yml
benchmark/cases/01_reverse_bug/: meta.json
benchmark/cases/02_sort_clean/: meta.json  spec.txt  target.py
benchmark/cases/03_clamp_bug/: meta.json
benchmark/cases/04_slug_bug/: meta.json
benchmark/cases/05_dedupe_clean/: meta.json  target.py
benchmark/cases/06_parse_bug/: meta.json  spec.txt
benchmark/cases/07_reverse_clean/: meta.json  spec.txt  target.py
benchmark/cases/08_sort_bug/: meta.json
benchmark/cases/09_clamp_clean/: meta.json  spec.txt  target.py
benchmark/cases/10_slug_clean/: meta.json  target.py
benchmark/cases/11_dedupe_bug/: meta.json  spec.txt
benchmark/cases/12_parse_clean/: meta.json  target.py
benchmark/cases/13_reverse_bug_eval/: meta.json  target.py
benchmark/cases/14_sort_bug_eval/: meta.json  target.py
benchmark/cases/15_clamp_bug_eval/: meta.json  target.py
benchmark/cases/16_slug_bug_eval/: meta.json  spec.txt  target.py
benchmark/cases/17_dedupe_bug_eval/: meta.json  target.py
benchmark/cases/18_parse_bug_eval/: meta.json  target.py
benchmark/cases/19_median_bug_eval/: meta.json  (+2 more)
reports/: autonomy_limits.md  bootstrap_ci.json  bootstrap_ci.md  evaluation.json  evaluation.md  lineage.md  specialized_agent.json  split_sensitivity.json  split_sensitivity.md  writeup.md
scripts/: bootstrap_ci.py  split_sensitivity.py
src/stem_qa/: __init__.py  agent.py  cases.py  cli.py  skills.py
tests/: test_agent.py
(+1 files in other folders)
